--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,6 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Nanum Myeongjo", serif;
+    font-style: normal;
+    color: white;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
 }
 
 body {
@@ -12,4 +23,112 @@ body {
     width: 100%;
     position: relative;
     margin: 0 auto;
+    padding-top: 70px;
+}
+
+.header {
+    width: auto;
+    height: 70px;
+    top: 0;
+    left: 30px;
+    right: 30px;
+    position: fixed;
+    border-bottom: 1px solid white;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.menu {
+    display: flex;
+    align-items: center;
+}
+.menu_link {
+    font-size: 18px;
+    margin: 0 10px;
+}
+.menu_link {
+    font-size: 18px;
+    margin: 0 10px;
+    background:
+        linear-gradient(to right,
+            rgb(0, 0, 0),
+            rgb(0, 0, 0)),
+        linear-gradient(to right,
+            rgba(255, 0, 0, 1),
+            rgba(255, 0, 180, 1),
+            rgba(0, 100, 200, 1));
+    background-size: 100% 2px, 0 2px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+}
+a:hover {
+    background-size: 0 2px, 100% 2px;
+}
+
+.members_container {
+    width: 100%;
+    height: 100%;
+    padding: 0 30px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.member {
+    width: 500px;
+    height: 700px;
+    background-color: white;
+}
+.member_info {
+    width: 100%;
+    height: 100%;
+    transition: 0.3s;
+    background: black;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    opacity: 0;
+}
+.member_info:hover {
+    opacity: 1;
+}
+.member:nth-child(1) {
+    margin-top: 60px;
+}
+.member:nth-child(2) {
+    margin-top: 180px;
+}
+.member:nth-child(3) {
+    margin-top: 140px;
+}
+.member:nth-child(4) {
+    margin-top: 80px;
+}
+.member_name {
+
+}
+.scale {
+    width: 100%;
+}
+.bar {
+    width: 100%;
+    height: 30px;
+    margin-top: 15px;
+    background: linear-gradient(to right,
+    rgba(255, 0, 0, 1),
+    rgba(255, 0, 180, 1),
+    rgba(0, 100, 200, 1));
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.bar_label {
+    margin-left: 15px;
+}
+.bar_end {
+    height: 100%;
+    background-color: black;
 }
