--- a/public/template/index.ejs
+++ b/public/template/index.ejs
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/style_template.css">
+    <link rel="stylesheet" href="../styles/styleTemplate_Serhii.css">
 </head>
 <body>
 <div class="container">
