--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -228,8 +228,8 @@ a:hover {
 
 .members_container {
   width: 100%;
-  height: 100%;
-  padding: 0 30px;
+  height: calc(100vh - 70px);
+  padding: 50px 30px 0 30px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -320,24 +320,55 @@ a:hover {
 }
 
 .quote_container {
-  width: 100%;
-  height: calc(100vh - 70px);
-  margin-top: 30px;
-  background-image: url("../images/chess.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    width: 100%;
+    height: calc(100vh - 70px);
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 50% 50%;
 }
 
-.shadow {
-  width: 100%;
-  height: 100%;
-  background: rgb(0, 0, 0, 0.6);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 110px 90px;
+.quote {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-bottom: 40px;
+}
+.quote_text {
+    font-weight: bold;
+    font-size: 4em;
+    letter-spacing: .15em;
+}
+.quote_image_left {
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+.quote_left {
+    height: 100%;
+}
+.quote_image_right {
+    grid-row: 1/3;
+    grid-column: 2/3;
+    display: flex;
+    justify-content: flex-end;
+}
+.quote_right {
+    height: 100%;
+}
+
+
+
+/* .shadow {
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 110px 90px;
 }
 
 .quote_title {
@@ -355,44 +386,5 @@ a:hover {
 }
 
 .quote {
-  font-size: 5em;
-}
-
-.quote_container {
-  width: 100%;
-  height: calc(100vh - 70px);
-  margin-top: 30px;
-  background-image: url("../images/chess.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.shadow {
-  width: 100%;
-  height: 100%;
-  background: rgb(0, 0, 0, 0.6);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 110px 90px;
-}
-
-.quote_title {
-  font-size: 3em;
-  width: 100%;
-}
-
-.quote_mark_container {
-  width: 900px;
-  margin-top: 110px;
-}
-
-.quote_mark {
-  width: 96px;
-}
-
-.quote {
-  font-size: 5em;
-}
+    font-size: 5em;
+} */
