--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,322 +1,415 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Nanum Myeongjo", serif;
-  font-style: normal;
-  color: white;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Nanum Myeongjo", serif;
+    font-style: normal;
+    color: white;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 li {
-  list-style: none;
+    list-style: none;
 }
 
 body {
-  background-color: #000000;
+    background-color: #000000;
 }
 
 .gradient_text {
-  background-color: red;
+    background-color: red;
 
-  /* Create the gradient. */
-  background-image: linear-gradient(
-    30deg,
-    rgba(255, 0, 0, 1),
-    rgba(255, 0, 180, 1),
-    rgba(0, 100, 200, 1)
-  );
+    /* Create the gradient. */
+    background-image: linear-gradient(30deg,
+            rgba(255, 0, 0, 1),
+            rgba(255, 0, 180, 1),
+            rgba(0, 100, 200, 1));
 
-  /* Set the background size and repeat properties. */
-  background-size: 100%;
-  background-repeat: repeat;
+    /* Set the background size and repeat properties. */
+    background-size: 100%;
+    background-repeat: repeat;
 
-  /* Use the text as a mask for the background. */
-  /* This will show the gradient as a text color rather than element bg. */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
+    /* Use the text as a mask for the background. */
+    /* This will show the gradient as a text color rather than element bg. */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
 }
 
 /* The typing effect */
 @keyframes typing {
-  from {
-    width: 0;
-  }
+    from {
+        width: 0;
+    }
 
-  to {
-    width: 100%;
-  }
+    to {
+        width: 100%;
+    }
 }
+
+@keyframes changeColor {
+    0% { background-image: url('../images/phone.jpg'); }
+    25% { background-image: url('../images/coast.jpg'); }
+    50% { background-image: url('../images/night.jpg'); }
+    75% { background-image: url('../images/casette.jpg'); }
+    100% { background-image: url('../images/phone.jpg'); }
+  }
 
 .gradient_text {
-  background-color: red;
+    background-color: red;
 
-  /* Create the gradient. */
-  background-image: linear-gradient(
-    30deg,
-    rgba(255, 0, 0, 1),
-    rgba(255, 0, 180, 1),
-    rgba(0, 100, 200, 1)
-  );
+    /* Create the gradient. */
+    background-image: linear-gradient(30deg,
+            rgba(255, 0, 0, 1),
+            rgba(255, 0, 180, 1),
+            rgba(0, 100, 200, 1));
 
-  /* Set the background size and repeat properties. */
-  background-size: 100%;
-  background-repeat: repeat;
+    /* Set the background size and repeat properties. */
+    background-size: 100%;
+    background-repeat: repeat;
 
-  /* Use the text as a mask for the background. */
-  /* This will show the gradient as a text color rather than element bg. */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from {
-    width: 0;
-  }
-
-  to {
-    width: 100%;
-  }
+    /* Use the text as a mask for the background. */
+    /* This will show the gradient as a text color rather than element bg. */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
 }
 
 .container {
-  width: 100%;
-  position: relative;
-  margin: 0 auto;
-  padding-top: 70px;
+    width: 100%;
+    position: relative;
+    margin: 0 auto;
+    padding-top: 70px;
 }
 
 /* HEADER */
 .header {
-  width: auto;
-  height: 70px;
-  top: 0;
-  left: 0;
-  right: 0;
-  position: fixed;
-  background-color: black;
-  z-index: 1000;
+    width: auto;
+    height: 70px;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    background-color: black;
+    z-index: 1000;
 }
 
 .header_content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 30px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px;
 }
 
 .header_line {
-  height: 1px;
-  width: 100%;
-  background: linear-gradient(
-    to right,
-    rgba(255, 0, 0, 1),
-    rgba(255, 0, 180, 1),
-    rgba(0, 100, 200, 1)
-  );
+    height: 1px;
+    width: 100%;
+    background: linear-gradient(to right,
+            rgba(255, 0, 0, 1),
+            rgba(255, 0, 180, 1),
+            rgba(0, 100, 200, 1));
+}
+
+.title {
+    cursor: pointer;
 }
 
 .menu {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .menu_link {
-  font-size: 18px;
-  margin: 0 10px;
+    font-size: 18px;
+    margin: 0 10px;
+    cursor: pointer;
 }
 
 .menu_link {
-  font-size: 18px;
-  margin: 0 10px;
-  background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0)),
-    linear-gradient(
-      to right,
-      rgba(255, 0, 0, 1),
-      rgba(255, 0, 180, 1),
-      rgba(0, 100, 200, 1)
-    );
-  background-size: 100% 2px, 0 2px;
-  background-position: 100% 100%, 0 100%;
-  background-repeat: no-repeat;
-  transition: background-size 400ms;
+    font-size: 18px;
+    margin: 0 10px;
+    background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0)),
+        linear-gradient(to right,
+            rgba(255, 0, 0, 1),
+            rgba(255, 0, 180, 1),
+            rgba(0, 100, 200, 1));
+    background-size: 100% 2px, 0 2px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
 }
 
 a:hover {
-  background-size: 0 2px, 100% 2px;
+    background-size: 0 2px, 100% 2px;
 }
 
 /* BANNER */
 
 .banner {
-  width: 100%;
-  height: calc(100vh - 70px);
-  background-image: url("../images/banner.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  padding: 0 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+    width: 100%;
+    height: calc(100vh - 70px);
+    background-image: url("../images/banner.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 0 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .banner_text_container {
-  width: 60%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .banner_text {
-  width: 0;
-  font-size: 2em;
-  overflow: hidden;
-  /* The typwriter cursor */
-  white-space: nowrap;
-  /* Keeps the content on a single line */
-  letter-spacing: 0.15em;
-  display: inline-block;
+    width: 0;
+    font-size: 2em;
+    overflow: hidden;
+    /* The typwriter cursor */
+    white-space: nowrap;
+    /* Keeps the content on a single line */
+    letter-spacing: 0.15em;
+    display: inline-block;
 }
 
 .banner_text:nth-child(1) {
-  animation: typing 2s steps(40, end);
-  animation-fill-mode: forwards;
+    animation: typing 2s steps(40, end);
+    animation-fill-mode: forwards;
 }
 
 .banner_text:nth-child(2) {
-  animation: typing 2s steps(40, end);
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
+    animation: typing 2s steps(40, end);
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
 }
 
 .banner_text:nth-child(3) {
-  animation: typing 2s steps(40, end);
-  animation-delay: 4s;
-  animation-fill-mode: forwards;
+    animation: typing 2s steps(40, end);
+    animation-delay: 4s;
+    animation-fill-mode: forwards;
 }
 
 .banner_text:nth-child(4) {
-  animation: typing 2s steps(40, end);
-  animation-delay: 6s;
-  animation-fill-mode: forwards;
+    animation: typing 2s steps(40, end);
+    animation-delay: 6s;
+    animation-fill-mode: forwards;
 }
 
 .q {
-  font-size: 1.5em;
-  font-weight: bold;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 .banner_title {
-  font-size: 6em;
-  margin-top: 60px;
+    font-size: 6em;
+    margin-top: 60px;
+}
+
+/* INFO */
+
+.info_container {
+    width: 100%;
+    height: calc(100vh - 70px);
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: 60% 40%;
+}
+
+.info_left {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.info_image {
+    width: 90%;
+    height: 80%;
+    background-image: url('../images/casette.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation: changeColor 20s infinite step-start;
+}
+
+.info_discord {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.discord {
+    height: 100%;
+}
+
+.info_content {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.info {
+    font-size: 22px;
+    border-left: 1px solid white;
+    padding-left: 20px;
 }
 
 /* MEMBERS */
 
 .members_container {
-  width: 100%;
-  height: calc(100vh - 70px);
-  padding: 50px 30px 0 30px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+    width: 100%;
+    height: calc(100vh - 70px);
+    padding: 50px 30px 0 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .member_content {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .member {
-  flex: 1;
-  background-color: white;
+    flex: 1;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.member1 {
+    background-image: url('../images/yura2.jpeg');
+}
+
+.member2 {
+    background-image: url('../images/katya1.jpeg');
+}
+
+.member3 {
+    background-image: url('../images/serhii1.jpeg');
+}
+
+.member4 {
+    background-image: url('../images/borys1.jpeg');
 }
 
 .member_label {
-  font-size: 2em;
-  margin-left: 30px;
-}
-
-.member_info {
-  width: 100%;
-  height: 100%;
-  transition: 0.3s;
-  background: black;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  opacity: 0;
-}
-
-.member_info:hover {
-  opacity: 1;
-}
-
-.member_content:nth-child(1) {
-  width: 300px;
-  height: 400px;
-  margin-top: 60px;
-}
-
-.member_content:nth-child(2) {
-  width: 350px;
-  height: 450px;
-  margin-top: 180px;
-}
-
-.member_content:nth-child(3) {
-  width: 270px;
-  height: 350px;
-  margin-top: 30px;
-}
-
-.member_content:nth-child(4) {
-  width: 330px;
-  height: 370px;
-  margin-top: 80px;
-}
-
-.scale {
-  width: 100%;
-}
-
-.bar {
-  width: 100%;
-  height: 30px;
-  margin-top: 15px;
-  background: linear-gradient(
+    font-size: 2em;
+    margin: 5px 5px 5px 30px;
+    padding-left: 5px;
+    position: relative;
+    /* border: 2px solid;
+  border-image: linear-gradient(
     to right,
     rgba(255, 0, 0, 1),
     rgba(255, 0, 180, 1),
     rgba(0, 100, 200, 1)
-  );
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  ); */
+}
+
+.member_label::before {
+    content: '';
+    height: 100%;
+    width: 2px;
+    background: linear-gradient(45deg,
+            rgba(255, 0, 0, 1),
+            rgba(255, 0, 180, 1),
+            rgba(0, 100, 200, 1));
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.member_info {
+    width: 100%;
+    height: 100%;
+    transition: 0.3s;
+    background: black;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    opacity: 0;
+}
+
+.member_info:hover {
+    opacity: 1;
+}
+
+.member_content:nth-child(1) {
+    width: 300px;
+    height: 400px;
+    margin-top: 60px;
+}
+
+.member_content:nth-child(2) {
+    width: 320px;
+    height: 450px;
+    margin-top: 180px;
+}
+
+.member_content:nth-child(3) {
+    width: 270px;
+    height: 350px;
+    margin-top: 30px;
+}
+
+.member_content:nth-child(4) {
+    width: 330px;
+    height: 370px;
+    margin-top: 80px;
+}
+
+.scale {
+    width: 100%;
+}
+
+.bar {
+    width: 100%;
+    height: 25px;
+    margin-top: 15px;
+    padding-left: 10px;
+    background: linear-gradient(to right,
+            rgba(255, 0, 0, 1),
+            rgba(255, 0, 180, 1),
+            rgba(0, 100, 200, 1));
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bar_value {
+    font-weight: bold;
 }
 
 .bar_label {
-  margin-left: 15px;
+    font-size: 14px;
 }
 
 .bar_end {
-  height: 100%;
-  background-color: black;
+    height: 100%;
+    background-color: black;
 }
 
 .quote_container {
@@ -336,24 +429,29 @@ a:hover {
     align-items: flex-end;
     padding-bottom: 40px;
 }
+
 .quote_text {
     font-weight: bold;
     font-size: 4em;
     letter-spacing: .15em;
 }
+
 .quote_image_left {
     grid-row: 2/3;
     grid-column: 1/2;
 }
+
 .quote_left {
     height: 100%;
 }
+
 .quote_image_right {
     grid-row: 1/3;
     grid-column: 2/3;
     display: flex;
     justify-content: flex-end;
 }
+
 .quote_right {
     height: 100%;
 }
