--- a/public/styles/styleTemplate_Kate.css
+++ b/public/styles/styleTemplate_Kate.css
@@ -88,7 +88,7 @@ a:hover {
 
 
 .main {
-    margin: 0% 15%;
+    margin: 0 15%;
     padding-top: 10%;
     display: flex;
     align-items: center;
@@ -104,75 +104,84 @@ a:hover {
     max-width: 55%;
     display: flex;
     flex-direction: column;
-
-
 }
 
 .main_details h1{
     font-family: 'Montserrat', serif;
-    font-size: 2.5rem;
+    font-size: 3.25rem;
     margin:0;
 }
 
 .main_details h2{
-    font-size: 1.2rem;
-    color:#9575DE;
+    font-size: 1.5rem;
+    color: #F4D27C;
     margin: 1.2rem 0;
 }
 
 .main_details p{
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     width: 95%;
     margin: 0;
 }
 
-.gif{
-    margin-top: 10%
-}
-
-.video_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.main-video-container {
     margin-top: 15vh;
+    display: grid;
+    grid-template-columns: 1.1fr 1.2fr 1fr;
+    grid-template-rows: 1.3fr 1.2fr 1.4fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+    "text1 text1 video1"
+    "video2 text2 video1"
+    "video2 text3 text3";
 }
 
-.video-photo{
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+video{
+    height: 70vh;
 }
 
-/* Style the image to stick to the right */
-.video-text {
+.text1 { grid-area: text1;
+    padding-left: 2%;
+    font-size: 1.875rem;
+
+}
+
+.text1 h1{
+    margin-top: 0;
+}
+
+.text1 p{
+    margin-bottom: 10vh;
+}
+
+.video1 {
+    grid-area: video1;
     margin-left: auto;
-    margin-top:10vh;
 }
 
-.video-text video{
-    max-width:100%;
-    padding-left: 10%;
-    display: block;
+.video2 {
+    grid-area: video2;
 }
 
-.video-text p{
-    font-size: 1.5rem;
-    width: 90%;
-    margin-top: 10%;
-    margin-left: 5%;
-    padding-right: 5%;
+.text2 {
+    grid-area: text2;
+    margin-top: auto;
+    font-size: 2.125rem;
 }
 
-.video-photo img{
-    width: 40%;
-    margin-top: 40vh;
+.text2 h1{
+    color: #F4D27C;
 }
 
-.video_container_text {
-    margin-right: auto;
-    padding-left: 1%;
-    font-size: 2rem;
-    width: 80%
+.text3 {
+    grid-area: text3;
+    margin-top: auto;
+    margin-bottom: 0;
+    font-size: 1.875rem;
+    padding-bottom: 7%;
+    padding-right: 2%;
+
 }
 
 .personality-test{
@@ -199,17 +208,18 @@ a:hover {
 
 .personality-test_icon-wrapper h4{
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    color: #F4D27C
 }
 
 .personality-test_icon-wrapper h3{
     margin-bottom: 1rem;
-    font-size: 1.4rem;
+    font-size: 1.75rem;
 }
 
 .personality-test_icon-wrapper p{
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 .personality-test_scale-wrapper{
@@ -222,8 +232,9 @@ a:hover {
 
 .personality-test_scale-wrapper h4{
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
+    color: #F4D27C
 }
 
 .scale {
@@ -263,7 +274,7 @@ a:hover {
 .bar_label1, .bar_label2{
     margin: 0 1%;
     z-index: 1; /* Ensure the label appears above the square */
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
