--- a/public/styles/styleTemplate_Serhii.css
+++ b/public/styles/styleTemplate_Serhii.css
@@ -110,70 +110,98 @@ a:hover {
 
 .main_details h1{
     font-family: 'Montserrat', serif;
-    font-size: 2.5rem;
+    font-size: 3.125rem;
     margin:0;
 }
 
 .main_details h2{
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color:#9575DE;
     margin: 1.2rem 0;
 }
 
 .main_details p{
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     width: 95%;
     margin: 0;
 }
 
-.gif{
-    margin-top: 10%
-}
-
 .video_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-top: 15vh;
+    display: grid;
+    grid-template-columns: 1.4fr 0.6fr 1.7fr;
+    grid-template-rows: 1fr 0.9fr 1.1fr;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+    "text1 text1 video1"
+    "photo1 text3 video1"
+    "photo1 text2 text2";
 }
 
-.video-photo{
+.video1 { grid-area: video1;
+width: 100%;
+margin-bottom: 10vh;}
+
+.text1 { grid-area: text1;
+    font-size: 2.5rem;
+    padding-left: 2%;
+}
+
+.text2 { grid-area: text2;
+    font-size: 1.8rem;
+    padding-left: 2%;
+    padding-right: 2%;}
+
+.text3 { grid-area: text3;
+    font-size: 2.7rem;
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-}
+    align-items: center;
+    text-align: center;
+    color:#9575DE;}
 
-/* Style the image to stick to the right */
-.video-text {
-    margin-left: auto;
-    margin-top:10vh;
-}
+.photo1 { grid-area: photo1;
+width:100%}
 
-.video-text video{
-    max-width:100%;
-    padding-left: 10%;
-    display: block;
-}
 
-.video-text p{
-    font-size: 1.5rem;
-    width: 90%;
-    margin-top: 10%;
-    margin-left: 5%;
-    padding-right: 5%;
-}
+/*.video-photo{*/
+/*    display: flex;*/
+/*    align-items: flex-start;*/
+/*    justify-content: space-between;*/
+/*}*/
 
-.video-photo img{
-    width: 40%;
-    margin-top: 40vh;
-}
+/*!* Style the image to stick to the right *!*/
+/*.video-text {*/
+/*    margin-left: auto;*/
+/*    margin-top:10vh;*/
+/*}*/
 
-.video_container_text {
-    margin-right: auto;
-    padding-left: 1%;
-    font-size: 2rem;
-    width: 80%
-}
+/*.video-text video{*/
+/*    max-width:100%;*/
+/*    padding-left: 10%;*/
+/*    display: block;*/
+/*}*/
+
+/*.video-text p{*/
+/*    font-size: 1.875rem;*/
+/*    width: 90%;*/
+/*    margin-top: 10%;*/
+/*    margin-left: 5%;*/
+/*    padding-right: 5%;*/
+/*}*/
+
+/*.video-photo img{*/
+/*    width: 40%;*/
+/*    margin-top: 30vh;*/
+/*}*/
+
+/*.video_container_text {*/
+/*    margin-right: auto;*/
+/*    padding-left: 1%;*/
+/*    font-size: 2.5rem;*/
+/*    width: 80%*/
+/*}*/
 
 .personality-test{
     margin: auto;
@@ -199,7 +227,8 @@ a:hover {
 
 .personality-test_icon-wrapper h4{
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    color:#9575DE;
 }
 
 .personality-test_icon-wrapper h3{
@@ -209,7 +238,7 @@ a:hover {
 
 .personality-test_icon-wrapper p{
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 .personality-test_scale-wrapper{
@@ -222,8 +251,9 @@ a:hover {
 
 .personality-test_scale-wrapper h4{
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
+    color:#9575DE;
 }
 
 .scale {
@@ -263,7 +293,7 @@ a:hover {
 .bar_label1, .bar_label2{
     margin: 0 1%;
     z-index: 1; /* Ensure the label appears above the square */
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
