--- a/public/styles/styleTemplate_Serhii.css
+++ b/public/styles/styleTemplate_Serhii.css
@@ -48,10 +48,7 @@ body {
 .header_line {
     height: 1px;
     width: 100%;
-    background: linear-gradient(to right,
-    rgba(255, 0, 0, 1),
-    rgba(255, 0, 180, 1),
-    rgba(0, 100, 200, 1));
+    background: #9575DE;
 ;
 }
 
@@ -73,9 +70,8 @@ body {
             rgb(0, 0, 0),
             rgb(0, 0, 0)),
             linear-gradient(to right,
-            rgba(255, 0, 0, 1),
-            rgba(255, 0, 180, 1),
-            rgba(0, 100, 200, 1));
+            #9575DE,
+            #9575DE);
     background-size: 100% 2px, 0 2px;
     background-position: 100% 100%, 0 100%;
     background-repeat: no-repeat;
@@ -164,45 +160,6 @@ margin-bottom: 10vh;}
 .photo1 { grid-area: photo1;
 width:100%}
 
-
-/*.video-photo{*/
-/*    display: flex;*/
-/*    align-items: flex-start;*/
-/*    justify-content: space-between;*/
-/*}*/
-
-/*!* Style the image to stick to the right *!*/
-/*.video-text {*/
-/*    margin-left: auto;*/
-/*    margin-top:10vh;*/
-/*}*/
-
-/*.video-text video{*/
-/*    max-width:100%;*/
-/*    padding-left: 10%;*/
-/*    display: block;*/
-/*}*/
-
-/*.video-text p{*/
-/*    font-size: 1.875rem;*/
-/*    width: 90%;*/
-/*    margin-top: 10%;*/
-/*    margin-left: 5%;*/
-/*    padding-right: 5%;*/
-/*}*/
-
-/*.video-photo img{*/
-/*    width: 40%;*/
-/*    margin-top: 30vh;*/
-/*}*/
-
-/*.video_container_text {*/
-/*    margin-right: auto;*/
-/*    padding-left: 1%;*/
-/*    font-size: 2.5rem;*/
-/*    width: 80%*/
-/*}*/
-
 .personality-test{
     margin: auto;
     padding: 5vh 10% 0;
@@ -272,9 +229,8 @@ width:100%}
     height: 30px;
     margin-top: 5%;
     background: linear-gradient(to right,
-    rgba(255, 0, 0, 1),
-    rgba(255, 0, 180, 1),
-    rgba(0, 100, 200, 1));
+    #9673e6,
+    #2d2342);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -282,11 +238,10 @@ width:100%}
 
 .bar_end {
     position: absolute;
-    width: 32px; /* Adjust the width of the square */
+    width: 16px; /* Adjust the width of the square */
     height: 32px; /* Adjust the height of the square */
-    border: 3px solid black; /* Set the color and width of the border */
+    background-color: black;
     top: 50%;
-    border-radius: 16px;
     transform: translateY(-50%);
 }
 
