--- a/public/styles/styleTemplate_Serhii.css
+++ b/public/styles/styleTemplate_Serhii.css
@@ -122,6 +122,16 @@ a:hover {
     margin: 0;
 }
 
+.socials {
+    display: flex;
+    margin-top: 20px;
+}
+.social_img {
+    width: 28px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
 .video_container {
     margin-top: 15vh;
     display: grid;
