--- a/public/styles/styleTemplate_Yurii.css
+++ b/public/styles/styleTemplate_Yurii.css
@@ -1,305 +1,294 @@
 * {
-    padding: 0;
-    box-sizing: border-box;
-    color: aliceblue;
-    font-family: "Nanum Myeongjo", serif;
-
+  padding: 0;
+  box-sizing: border-box;
+  color: aliceblue;
+  font-family: "Nanum Myeongjo", serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
-
 body {
-    margin: 0 0;
-    padding: 0 0;
-    background-color: #000000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
+  margin: 0 0;
+  padding: 0 0;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
 }
 
 .header {
-    width: auto;
-    height: 70px;
-    top: 0;
-    left: 0;
-    right: 0;
-    position: fixed;
-    background-color: black;
-    z-index: 1000;
+  width: auto;
+  height: 70px;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  background-color: black;
+  z-index: 1000;
 }
 
 .header_content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 30px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
 }
 
 .header_line {
-    height: 1px;
-    width: 100%;
-    background: #43996a;
+  height: 1px;
+  width: 100%;
+  background: #43996a;
 }
 
 .menu {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .menu_link {
-    font-size: 18px;
-    margin: 0 10px;
+  font-size: 18px;
+  margin: 0 10px;
 }
 
 .menu_link {
-    font-size: 18px;
-    margin: 0 10px;
-    background:
-            linear-gradient(to right,
-            rgb(0, 0, 0),
-            rgb(0, 0, 0)),
-            linear-gradient(to right,
-            #43996a,
-            #43996a,
-            #43996a);
-    background-size: 100% 2px, 0 2px;
-    background-position: 100% 100%, 0 100%;
-    background-repeat: no-repeat;
-    transition: background-size 400ms;
+  font-size: 18px;
+  margin: 0 10px;
+  background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0)),
+    linear-gradient(to right, #43996a, #43996a, #43996a);
+  background-size: 100% 2px, 0 2px;
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
 }
 
 a:hover {
-    background-size: 0 2px, 100% 2px;
+  background-size: 0 2px, 100% 2px;
 }
-
 
 .main {
-    margin: 0% 15%;
-    padding-top: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: calc(100vh - 70px);
+  margin: 0% 15%;
+  padding-top: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: calc(100vh - 70px);
 }
 .main_photo {
-    width: 400px;
-    height: 400px;
-    background-image: url('../images/yura1.jpeg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-right: 40px;
+  margin-right: 7%;
+  max-width: 40%;
 }
 
-.main_details{
-    max-width: 55%;
-    display: flex;
-    flex-direction: column;
+.main_details {
+  max-width: 55%;
+  display: flex;
+  flex-direction: column;
 }
 
-.main_details h1{
-    font-family: 'Montserrat', serif;
-    font-size: 3.125rem;
-    margin:0;
+.main_details h1 {
+  font-family: "Montserrat", serif;
+  font-size: 3.125rem;
+  margin: 0;
 }
 
-.main_details h2{
-    font-size: 1.5rem;
-    color:#43996a;
-    margin: 1.2rem 0;
+.main_details h2 {
+  font-size: 1.5rem;
+  color: #43996a;
+  margin: 1.2rem 0;
 }
 
-.main_details p{
-    font-size: 1.5rem;
-    width: 95%;
-    margin: 0;
+.main_details p {
+  font-size: 1.5rem;
+  width: 95%;
+  margin: 0;
 }
 
 .socials {
-    display: flex;
-    margin-top: 20px;
+  display: flex;
+  margin-top: 20px;
 }
 .social_img {
-    width: 28px;
-    margin-right: 10px;
-    cursor: pointer;
+  width: 28px;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
-.gif{
-    margin-top: 10%
+.gif {
+  margin-top: 10%;
 }
 
-.video_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15vh;
+.main-video-container {
+  margin-top: 15vh;
+  display: grid;
+  grid-template-columns: 1.4fr 0.6fr 1.7fr;
+  grid-template-rows: 1fr 0.9fr 1.1fr;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "text1 text1 video1"
+    "photo1 text3 video1"
+    "photo1 text2 text2";
 }
 
-.video-photo{
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+.video1 {
+  grid-area: video1;
+  width: 100%;
+  margin-bottom: 10vh;
 }
 
 /* Style the image to stick to the right */
-.video-text {
-    margin-left: auto;
-    margin-top:10vh;
+.text1 {
+  grid-area: text1;
+  font-size: 2.5rem;
+  padding-left: 2%;
 }
 
 .quote {
-    margin-left: 10%;
-    color: #43996a;
+  margin-left: 10%;
+  color: #43996a;
 }
 
-.video-text video{
-    max-width:100%;
-    padding-left: 10%;
-    display: block;
+.video-text video {
+  max-width: 100%;
+  padding-left: 10%;
+  display: block;
 }
 
-.video-text p{
-    font-size: 1.5rem;
-    width: 90%;
-    margin-top: 10%;
-    margin-left: 5%;
-    padding-right: 5%;
+.video-text p {
+  font-size: 1.5rem;
+  width: 90%;
+  margin-top: 10%;
+  margin-left: 5%;
+  padding-right: 5%;
 }
 
-.video-photo img{
-    width: 40%;
-    margin-top: 40vh;
+.video-photo img {
+  width: 40%;
+  margin-top: 40vh;
 }
 
 .video_container_text {
-    margin-right: auto;
-    padding-left: 1%;
-    font-size: 2rem;
-    width: 80%
+  margin-right: auto;
+  padding-left: 1%;
+  font-size: 2rem;
+  width: 80%;
 }
 
 .first_video {
-    width: 600px;
+  width: 600px;
 }
 
 .bottom_text_container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 150px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 150px;
 }
 
 .bottom_text {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
-
-
-
-.personality-test{
-    margin: auto;
-    padding: 5vh 10% 0;
-    width: 100%;
-    display:flex;
-    height: calc(100vh - 70px);
-    text-align: center;
+.personality-test {
+  margin: auto;
+  padding: 5vh 10% 0;
+  width: 100%;
+  display: flex;
+  height: calc(100vh - 70px);
+  text-align: center;
 }
 
-.personality-test_icon-wrapper{
-    display:flex;
-    flex-direction: column;
-    text-align: center;
-    width:40%;
-    margin: auto;
+.personality-test_icon-wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 40%;
+  margin: auto;
 }
 
-.personality-test_icon{
-    width: 80%;
-    margin: 0 auto;
+.personality-test_icon {
+  width: 80%;
+  margin: 0 auto;
 }
 
-.personality-test_icon-wrapper h4{
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
+.personality-test_icon-wrapper h4 {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
 }
 
-.personality-test_icon-wrapper h3{
-    margin-bottom: 1rem;
-    font-size: 1.4rem;
+.personality-test_icon-wrapper h3 {
+  margin-bottom: 1rem;
+  font-size: 1.4rem;
 }
 
-.personality-test_icon-wrapper p{
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
+.personality-test_icon-wrapper p {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
 }
 
-.personality-test_scale-wrapper{
-    width:100%;
-    display:flex;
-    flex-direction: column;
-    text-align: center;
-    margin: auto;
+.personality-test_scale-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: auto;
 }
 
-.personality-test_scale-wrapper h4{
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-    text-align: center;
+.personality-test_scale-wrapper h4 {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
 .scale {
-
 }
 .scale {
-    margin: auto;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
+  margin: auto;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
 }
 
 .bar {
-    position: relative;
-    width: 100%;
-    height: 30px;
-    margin-top: 5%;
-    background: linear-gradient(to right,
-    #4acf85,
-    #114528);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: relative;
+  width: 100%;
+  height: 30px;
+  margin-top: 5%;
+  background: linear-gradient(to right, #4acf85, #114528);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .bar_end {
-    position: absolute;
-    width: 16px; /* Adjust the width of the square */
-    height: 32px; /* Adjust the height of the square */
-    background-color: black;
-    top: 50%;
-    transform: translateY(-50%);
+  position: absolute;
+  width: 16px; /* Adjust the width of the square */
+  height: 32px; /* Adjust the height of the square */
+  background-color: black;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.bar_label1, .bar_label2{
-    margin: 0 1%;
-    z-index: 1; /* Ensure the label appears above the square */
-    font-size: 1.2rem;
-    font-weight: bold;
+.bar_label1,
+.bar_label2 {
+  margin: 0 1%;
+  z-index: 1; /* Ensure the label appears above the square */
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
-.bar_percent{
-    position: static;
-    margin-top:10%;
-    display:inline-block;
+.bar_percent {
+  position: static;
+  margin-top: 10%;
+  display: inline-block;
 }
