--- a/public/styles/styleTemplate_Yurii.css
+++ b/public/styles/styleTemplate_Yurii.css
@@ -129,23 +129,28 @@ a:hover {
   margin-top: 15vh;
   display: grid;
   grid-template-columns: 1.4fr 0.6fr 1.7fr;
-  grid-template-rows: 1fr 0.9fr 1.1fr;
+  grid-template-rows: 1.5fr 0.6fr 0.9fr;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
     "text1 text1 video1"
-    "photo1 text3 video1"
-    "photo1 text2 text2";
+    "video2 video2 text2"
+    "video2 video2 text2";
 }
 
 .video1 {
   grid-area: video1;
-  width: 100%;
+  max-width: 800px;
   margin-bottom: 10vh;
+  justify-self: end;
 }
 
-/* Style the image to stick to the right */
+.video2 {
+  max-width: 1000px;
+  grid-area: video2;
+}
+
 .text1 {
   grid-area: text1;
   font-size: 2.5rem;
@@ -153,50 +158,20 @@ a:hover {
 }
 
 .quote {
-  margin-left: 10%;
   color: #43996a;
-}
-
-.video-text video {
-  max-width: 100%;
-  padding-left: 10%;
-  display: block;
-}
-
-.video-text p {
-  font-size: 1.5rem;
-  width: 90%;
-  margin-top: 10%;
-  margin-left: 5%;
-  padding-right: 5%;
-}
-
-.video-photo img {
-  width: 40%;
-  margin-top: 40vh;
-}
-
-.video_container_text {
-  margin-right: auto;
-  padding-left: 1%;
   font-size: 2rem;
-  width: 80%;
+  margin-bottom: 2rem;
 }
 
-.first_video {
-  width: 600px;
-}
-
-.bottom_text_container {
+.text2 {
+  grid-area: text2;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px 150px;
-}
-
-.bottom_text {
-  font-size: 2rem;
+  padding: 30px 80px;
+  font-size: 1.875rem;
 }
 
 .personality-test {
