--- a/public/template/member.ejs
+++ b/public/template/member.ejs
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="header_content">
         <h1 class="title">
-          <a href="index.html"><b>4in1</b> Studio</a>
+          <a href="../"><b>4in1</b> Studio</a>
         </h1>
         <nav>
           <ul class="menu">
@@ -59,12 +59,12 @@
       <div class="text1"><%= text1 %></div>
       <video class="video1" src="<%= video1 %>" autoplay loop muted></video>
       <video class="video2" src="<%= video2 %>" autoplay loop muted></video>
-      <img class="photo1" src="<%= photo_replacement%>" alt="" />
       <div class="text2">
         <h1 class="quote"><%= quote %></h1>
         <%= text2 %>
       </div>
       <div class="text3"><%- text3 %></div>
+      <img class="photo1" src="<%= photo_replacement%>" alt="" />
     </div>
     <div class="personality-test" id="personality">
       <div class="personality-test_icon-wrapper">
